--- a/src/app/curriculum-vitae/curriculum-vitae.component.html
+++ b/src/app/curriculum-vitae/curriculum-vitae.component.html
@@ -1,18 +1,25 @@
 <div class="page-container">
     <div class="card-container">
       <mat-card class="mat-card" style="border: 5px solid rgba(255, 255, 255, 0.744);">
-        <h3>Certifications</h3>
+        <div class="accordion">
+          <mat-accordion #accordion="matAccordion"  multi>
+            <mat-expansion-panel *ngFor="let cv of cvData; let index">
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  {{ cv.section }}
+                </mat-panel-title>
+              </mat-expansion-panel-header >
+              <p *ngFor="let item of cv.details">
+                {{item.title}}
+              </p>
+            </mat-expansion-panel>
+          </mat-accordion>
+        </div>
       </mat-card>
       <mat-card class="mat-card" style="border: 5px solid rgba(255, 255, 255, 0.744);">
         <h3>Certifications</h3>
       </mat-card>
     </div>
-    <!-- <div class="img-container">
-      <div class="label-container">
-        <h1 class="large-label">Davide Valenti <br> Front-End Developer</h1>
-      </div>
-      <img src="assets/img/bg2.png" alt="Descrizione dell'immagine" />
-    </div> -->
   </div>
 
 
