--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,8 +1,8 @@
     <div class="page-container">
       <div class="card-container">
-        <mat-card class="mat-card" style="border: 5px solid rgb(233 79 131);;" (click)="goTo('certifications')">
+        <!-- <mat-card class="mat-card" style="border: 5px solid rgb(233 79 131);;" (click)="goTo('certifications')">
           <h3>Certifications</h3>
-        </mat-card>
+        </mat-card> -->
         <mat-card class="mat-card" style="border: 5px solid rgb(123, 228, 242);" (click)="goTo('cv')">
           <h3>Curriculum Vitae</h3>
         </mat-card>
