--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; margin: 0; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color:rgba(0, 0, 0, 0.73);}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color:rgb(0, 0, 0);}
 
 app-root {
   background: url('assets/img/bg10.jpg') no-repeat center center fixed; 
