--- a/src/app/curriculum-vitae/curriculum-vitae.component.html
+++ b/src/app/curriculum-vitae/curriculum-vitae.component.html
@@ -1,18 +1,34 @@
 <div class="page-container">
-    <div class="card-container">
-      <mat-card class="mat-card" style="border: 5px solid rgba(255, 255, 255, 0.744);">
-        <h3>Certifications</h3>
-      </mat-card>
-      <mat-card class="mat-card" style="border: 5px solid rgba(255, 255, 255, 0.744);">
-        <h3>Certifications</h3>
-      </mat-card>
-    </div>
-    <!-- <div class="img-container">
-      <div class="label-container">
-        <h1 class="large-label">Davide Valenti <br> Front-End Developer</h1>
+  <div class="card-container">
+    <mat-card
+      class="mat-card"
+      style="border: 5px solid rgba(255, 255, 255, 0.744)"
+    >
+      <div class="profile-container">
+        <div class="profile-picture">
+          <img src="../../assets/img/profile.png" />
+        </div>
+        <div class="profile-introduction">
+          <h3>Davide Valenti - Software Developer</h3>
+          <p>
+            I am a Senior Frontend Developer with a passion for creating
+            scalable and user-friendly applications in Angular and React. While
+            my focus is on frontend, I also have professional experience in Java
+            backend development, allowing me to contribute across the stack and
+            ensure seamless integration. I thrive on technical challenges,
+            performance optimization, and delivering high-quality software
+            solutions.
+          </p>
+        </div>
       </div>
-      <img src="assets/img/bg2.png" alt="Descrizione dell'immagine" />
-    </div> -->
+      <mat-divider></mat-divider>
+      <div class="profile"></div>
+    </mat-card>
+    <!-- <mat-card
+      class="mat-card"
+      style="border: 5px solid rgba(255, 255, 255, 0.744)"
+    >
+      <div class="profile-list"></div>
+    </mat-card> -->
   </div>
-
-
+</div>
