--- a/src/app/curriculum-vitae/curriculum-vitae.component.css
+++ b/src/app/curriculum-vitae/curriculum-vitae.component.css
@@ -16,10 +16,9 @@
   margin-bottom: 20px;
 }
 
-.mat-card {
-  height: 650px;
-  width: 800px;
-  max-width: 100%;
+.mat-card-1 {
+  max-height: 650px;
+  max-width: 800px;
   display: flex;
   text-align: center;
   background: #ffffff82;
@@ -29,14 +28,12 @@
   flex-direction: row;
   display: flex;
   align-items: flex-end; /* Allinea la base dell'immagine e del testo */
+  max-height: 500px;
 }
 
 .profile-introduction {
   margin-left: 20px;
   margin-right: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end; /* Allinea il testo al fondo del contenitore */
   background: #b3adad;
 }
 
@@ -60,8 +57,9 @@ p {
 
 .list-style {
   display: flex;
-  gap: 50px;
+  gap: 20px;
   margin-top: 20px;
+  margin-bottom: 20px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -69,35 +67,53 @@ p {
   font-weight: 600px;
 }
 
-mat-list-item {
+.list-style mat-list-item {
   transition: transform 0.1s ease-in-out;
   display: flex;
-  flex-direction: column;
+  align-items: center; /* Allinea le icone verticalmente con il testo */
+}
+
+.list-style mat-icon {
+  margin-right: 10px;
+}
+
+.list-style mat-icon {
+  margin-right: 10px; /* Distanza tra icona e testo */
+  vertical-align: middle; /* Allinea verticalmente l'icona con il testo */
+  font-size: 24px; /* Puoi regolare la dimensione dell'icona se necessario */
 }
 
 mat-list-item:hover {
   cursor: pointer;
-  transform: scale(1.4);
+  transform: scale(1.2);
 }
 
-@media (max-height: 800px) {
-  .card-container {
+@media (max-width: 600px) {
+  .profile-introduction {
+    max-height: 300px; /* Imposta un'altezza massima per attivare lo scroll */
+    overflow-y: auto; /* Abilita lo scroll verticale */
+    overflow-x: hidden; /* Evita lo scroll orizzontale */
     margin-top: 10px;
     margin-bottom: 10px;
   }
-}
 
-@media (max-width: 420px) {
-  .mat-card {
-    width: 50%;
-    height: 25%;
+  .profile-container {
+    max-width: 400px;
+  }
+
+  .profile-picture {
+    display: none;
+  }
+
+  .list-style {
+    max-width: 400px;
   }
 }
 
 mat-divider {
   border-top-width: 2px; /* Spessore */
-  border-color: rgba(0, 0, 0, 0.462); /* Colore */
-  margin-top: 50px;
+  border-color: rgba(92, 89, 89, 0.462); /* Colore */
+  margin-top: 20px;
   margin-right: 100px;
   margin-left: 100px;
 }
