--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar class="toolbar">
-    <span class="title">Davide Valenti - Front-End Developer</span>
-  </mat-toolbar>
+  <span class="title">Davide Valenti - Portfolio</span>
+</mat-toolbar>
