--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(9 9 11);
 }
 
 app-root {
