--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,25 +1,23 @@
 .footer {
-  background:rgba(0, 0, 0, 0);
-  color:rgb(255, 255, 255);
+  background: rgba(0, 0, 0, 0);
+  color: rgb(255, 255, 255);
   padding: 20px 0;
   text-align: center;
-  box-shadow: 0px -1px 10px #ffffff /* Ombra bianca nella parte superiore */
+  /* box-shadow: 0px -1px 10px #ffffff; */
 }
-  
-  .footer .footer-content {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 10px;
-  }
-  
-  .footer .social-links a {
-    color:rgb(255, 255, 255);
-    margin: 0 15px;
-    font-size: 24px;
-  }
-  
-  .footer .social-links a:hover {
-    color: #aaa;
-  }
 
-  
+.footer .footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.footer .social-links a {
+  color: rgb(255, 255, 255);
+  margin: 0 15px;
+  font-size: 24px;
+}
+
+.footer .social-links a:hover {
+  color: #aaa;
+}
