--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,3 +1,5 @@
 <mat-toolbar class="toolbar">
-  <span class="title">Davide Valenti - Portfolio</span>
+  <span class="title"
+    >Davide Valenti {{ title ? " - " + title : "- Portfolio" }}</span
+  >
 </mat-toolbar>
