--- a/src/app/curriculum-vitae/curriculum-vitae.component.html
+++ b/src/app/curriculum-vitae/curriculum-vitae.component.html
@@ -1,5 +1,15 @@
+<mat-icon
+  class="back-button"
+  *ngIf="showDetailedCard"
+  (click)="activeDetailedCard('')"
+  >arrow_back</mat-icon
+>
 <div class="card-container">
-  <mat-card class="mat-card" [class.animated]="animateCard">
+  <mat-card
+    class="mat-card"
+    *ngIf="!showDetailedCard"
+    [class.animated]="!animateCard"
+  >
     <div class="profile-container">
       <div class="profile-picture">
         <img src="../../assets/img/profile.png" />
