set title and cv detail changes

--- a/src/app/curriculum-vitae/curriculum-vitae.component.css
+++ b/src/app/curriculum-vitae/curriculum-vitae.component.css
@@ -149,6 +149,10 @@ mat-divider {
     display: none;
   }
 
+  .back-button {
+    margin-left: 20px;
+  }
+
   .mat-card-detail {
     max-width: 350px;
   }
