--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-toolbar></app-toolbar>
+<app-toolbar [title]="title"></app-toolbar>
 <div class="main-content">
-  <router-outlet></router-outlet>
+  <app-curriculum-vitae (setTitle)="setTitle($event)"></app-curriculum-vitae>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
