--- a/src/app/cv-details/cv-details.component.html
+++ b/src/app/cv-details/cv-details.component.html
@@ -9,29 +9,32 @@
   </mat-expansion-panel-header>
 
   <div class="job-details">
-    <ul>
-      <h4>Period:</h4>
-      <p>{{ job.startDate }} - {{ job.endDate }}</p>
-      <p><strong>Location:</strong> {{ job.location }}</p>
-    </ul>
-    <ul>
-      <h4>Technologies:</h4>
-      <span *ngFor="let tech of job.technologies; let index = index"
-        >{{ tech }}
-        {{ job.technologies?.length === index + 1 ? "" : ", " }}</span
-      >
-    </ul>
+    <mat-card class="mat-card-cv">
+      <ul>
+        <h4>Period:</h4>
+        <p>{{ job.startDate }} - {{ job.endDate }}</p>
+        <p><strong>Location:</strong> {{ job.location }}</p>
+      </ul>
+      <ul>
+        <h4>Technologies:</h4>
+        <span *ngFor="let tech of job.technologies; let index = index"
+          >{{ tech }}
+          {{ job.technologies?.length === index + 1 ? "" : ", " }}</span
+        >
+      </ul>
 
-    <ul>
-      <h4>Tools:</h4>
-      <span *ngFor="let tool of job.tools; let index = index"
-        >{{ tool }} {{ job.tools?.length === index + 1 ? "" : ", " }}</span
-      >
-    </ul>
-
-    <ul>
-      <h4>Responsibilities:</h4>
-      <li *ngFor="let res of job.responsibilities">{{ res }}</li>
-    </ul>
+      <ul>
+        <h4>Tools:</h4>
+        <span *ngFor="let tool of job.tools; let index = index"
+          >{{ tool }} {{ job.tools?.length === index + 1 ? "" : ", " }}</span
+        >
+      </ul>
+    </mat-card>
+    <mat-card class="mat-card-cv">
+      <ul>
+        <h4>Responsibilities:</h4>
+        <li *ngFor="let res of job.responsibilities">{{ res }}</li>
+      </ul>
+    </mat-card>
   </div>
 </mat-expansion-panel>
