--- a/src/app/curriculum-vitae/curriculum-vitae.component.css
+++ b/src/app/curriculum-vitae/curriculum-vitae.component.css
@@ -39,7 +39,6 @@ mat-divider {
   justify-content: center;
   align-items: center;
   gap: 16px;
-  margin: 50px 0 20px;
   overflow: hidden;
 }
 
@@ -64,7 +63,6 @@ mat-divider {
   margin: 10px;
   background: rgba(255, 255, 255, 0.78);
   opacity: 0;
-  transform: scale(0.8); /* Parte più piccola */
   transition: opacity 0.5s ease-out, transform 0.5s ease-out;
   pointer-events: none; /* Evita interazioni mentre è nascosta */
 }
@@ -117,7 +115,8 @@ mat-divider {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  margin: 20px 0;
+  transform: scale(1.3);
+  margin: 80px 0;
   font-size: large;
   font-weight: 600;
 }
