--- a/src/app/curriculum-vitae/curriculum-vitae.component.html
+++ b/src/app/curriculum-vitae/curriculum-vitae.component.html
@@ -12,7 +12,7 @@
   >
     <div class="profile-container">
       <div class="profile-picture">
-        <img src="../../assets/img/profile.png" />
+        <img src="/portfolio/assets/img/profile.png" />
       </div>
       <mat-card class="profile-introduction">
         <h3>{{ introduction.title }}</h3>
