--- a/src/app/cv-details/cv-details.component.html
+++ b/src/app/cv-details/cv-details.component.html
@@ -12,7 +12,9 @@
     <mat-card class="mat-card-cv">
       <ul>
         <h4>Period:</h4>
-        <p>{{ job.startDate }} - {{ job.endDate }}</p>
+        <p>
+          <strong>From - To: </strong>{{ job.startDate }} - {{ job.endDate }}
+        </p>
         <p><strong>Location:</strong> {{ job.location }}</p>
       </ul>
       <ul>
