--- a/src/app/cv-details/cv-details.component.css
+++ b/src/app/cv-details/cv-details.component.css
@@ -19,6 +19,10 @@ mat-expansion-panel-header:hover {
   cursor: pointer;
 }
 
+::ng-deep .mat-expansion-panel-body {
+  padding: 0 !important;
+}
+
 .mat-card-cv {
   background: white;
   border: 2px solid #7dd9e9;
@@ -50,7 +54,7 @@ mat-expansion-panel-header:hover {
 
 /* Dettagli corpo pannello */
 .job-details {
-  padding: 16px;
+  padding: 10px;
   font-size: 17px;
   line-height: 1.6;
   color: #000000;
